fix: overflow in playlist page, playlist having same item repeatedly

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -22,6 +22,7 @@ a {
   justify-content: center;
   align-items: center;
   flex-flow: column;
+  z-index: 2;
 }
 .list {
   max-height: 100px;
@@ -114,8 +115,8 @@ a {
   line-height: 2;
 }
 .playlistitem {
-  height: 60vh;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 .playlistitem > a {
   max-height: 112px;
@@ -460,14 +461,27 @@ button {
     margin-left: 0.2rem;
     flex-grow: 2;
   }
+  .recommends {
+    width: 100%;
+  }
+  .iframe-wrapper {
+    width: 100%;
+  }
+  .playlistitem {
+    height: 42vh;
+  }
 }
 
-@media only screen and (min-width: 500px) and(max-width:1024px) {
+@media (min-width: 501px) and (max-width: 1024px) {
   .videos > a {
     width: 40%;
     max-width: 250px;
     margin: 2%;
   }
+  .videonavbar-search > input {
+    width: 250px;
+  }
+
   .recommend {
     width: 100%;
 
@@ -484,10 +498,13 @@ button {
   .iframe-wrapper {
     width: 650px;
     height: 400px;
-    margin-left: 2rem;
+    margin-left: 1rem;
   }
   .recommend-flexwrapper {
     display: flex;
+  }
+  .playlistitem {
+    height: 48vh;
   }
 }
 @media only screen and (min-width: 1030px) {
@@ -559,5 +576,8 @@ button {
   }
   .navigator a:last-child button {
     border-radius: 0 40% 0 0;
+  }
+  .playlistitem {
+    height: 55vh;
   }
 }
